syntax="proto3";
package protobuf;

option go_package = "./";

service RouteGuide{
    rpc GetTasks (TaskRequest) returns (TaskListResponse) {}
    rpc AddTask (AddTaskRequest) returns (TaskResponse) {}
    rpc UpdateTask (UpdateTaskRequest) returns (TaskResponse) {}
    rpc DeleteTask (DeleteTaskRequest) returns (TaskResponse) {}
}

message TaskRequest {
}

message Task{
int32 id = 1;
string title = 2;
string description = 3;
string duration = 4;
}

message TaskListResponse {
    repeated Task tasks = 1;
}

message AddTaskRequest {
    string title = 1;
    string description = 2;
    string duration = 3;
}

message TaskResponse {
    Task task = 1;
}

message UpdateTaskRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string duration = 4;
}

message DeleteTaskRequest {
    int32 id = 1;
}